--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 @import url(fontawesome-all.min.css);
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800");
+@import url("https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 
 html, body, div, span, applet, object,
@@ -112,7 +112,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #1c1c1c;
-		font-family: "Open Sans", Helvetica, sans-serif;
+		font-family: "Funnel Sans", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 400;
 		line-height: 1.75;
@@ -166,7 +166,7 @@ input, select, textarea {
 		font-weight: 600;
 		line-height: 1.3;
 		margin: 0 0 0.5em 0;
-		letter-spacing: -0.035em;
+		letter-spacing: -0.015em;
 	}
 
 		h1 a {
@@ -194,7 +194,7 @@ input, select, textarea {
 		font-weight: 800;
 		line-height: 1.5;
 		margin: 0 0 1em 0;
-		letter-spacing: 0.05em;
+		letter-spacing: 0em;
 	}
 
 		h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -3368,4 +3368,5 @@ input, select, textarea {
     max-width: 100%;
   }
 }
+
 
